# vasp-cmake

./: .gitignore  CMakeLists.txt  COPYING  INFO.rst  INSTALL.rst  README  README.cmake  README.cmake_migration  README.rst  mklinks.sh  setup
cmake/: FindLAPACK.cmake
compilers/: CXXFlags.cmake  FortranFlags.cmake
src/: CMakeLists.txt  README.rst
src/lapack/: CMakeLists.txt
testing/: CMakeLists.txt
vasp/: CMakeLists.txt
vasp/lapack/: CMakeLists.txt
vasp/vasp.5.3/: CMakeLists.txt
vasp/vasp.5.lib/: CMakeLists.txt
vasp/vasplib/: CMakeLists.txt
